--- a/index.html
+++ b/index.html
@@ -192,7 +192,10 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+           
+		<a class="btn btn-success btn-large" data-code="414f8eeaefad51f7cd9991aa9b335835"
+ href="https://coinbase.com/checkouts/414f8eeaefad51f7cd9991aa9b335835">Preorder with Bitcoin</a>
+<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           <div class="span8 offset2 social">
 		<!-- AddThis Button BEGIN -->
